--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -64,3 +64,22 @@ pre {
 	overflow: auto;
 	padding: 1.6em;
 }
+
+code, kbd, tt, var {
+	font-family: $font__code;
+	@include font-size(0.9375);
+}
+
+abbr, acronym {
+	border-bottom: 1px dotted $color__border-abbr;
+	cursor: help;
+}
+
+mark, ins {
+	background: $color__background-ins;
+	text-decoration: none;
+}
+
+big {
+	font-size: 125%;
+}
