--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,11 +12,18 @@ $container-width: 1120px;
 
 $color__wcyvr-green: rgb(39, 78, 47);
 
-$color__background-pre: #eee;
-
+$color__background-body: #fff;
 $color__text-main: #404040;
 $color__link: $color__wcyvr-green;
 $color__link-hover: $color__wcyvr-green;
+
+$color__background-screen: #f1f1f1;
+$color__text-screen: #21759b;
+
+$color__background-hr: #ccc;
+$color__background-pre: #eee;
+$color__background-ins: #fff9c0;
+$color__border-abbr: #666;
 
 // Structure
 
