Style homepage and other common elements.

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,3 +1,39 @@
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
+
+.site-footer {
+   background: black;
+   padding-bottom: $base__space-unit / 2;
+   padding-top: $base__space-unit / 2;
+
+   a {
+      color: white;
+      text-decoration: none;
+
+      &:hover {
+         color: $color__wcyvr-yellow;
+         text-decoration: underline;
+      }
+   }
+}
+
+.site-info {
+   @include container;
+   display: flex;
+   @include font-size(.8);
+   justify-content: space-between;
+
+   @include tablet {
+      @include font-size(1);
+   }
+
+   a {
+      flex: 0 1 49%;
+      max-width: 49%;
+   }
+}
+
+.site-info-network {
+   text-align: right;
+}
