--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -14,6 +14,16 @@
 	margin-right: auto;
 }
 
+// Container
+@mixin container {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: $outer-container-width;
+	padding-left: $base__space-unit / 2;
+	padding-right: $base__space-unit / 2;
+	width: 100%;
+}
+
 // Media Queries
 @mixin big-phone {
   @media (min-width: $big-phone-width) {
