--- a/sass/_modules.scss
+++ b/sass/_modules.scss
@@ -3,7 +3,7 @@
 --------------------------------------------------------------*/
 
 /* Text meant only for screen readers. */
-.screen-reader-text {
+.assistive-text {
 	clip: rect(1px, 1px, 1px, 1px);
 	position: absolute !important;
 	height: 1px;
