Attempt to fix background images>

--- a/sass/_widgets.scss
+++ b/sass/_widgets.scss
@@ -10,7 +10,7 @@
    background:
       linear-gradient( to bottom, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 100% ),
       url('https://2016.vancouver.wordcamp.org/files/2016/05/log-pile.jpg') center center no-repeat;
-   background-size: cover, cover;
+   background-size: cover;
    color: white;
    padding: ($base__space-unit * 2) 0;
 }
