Do something really hacky with FA icons.

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -65,7 +65,8 @@
       padding-top: $base__space-unit / 2;
 
       &:before {
-         content: "\f073";
+         // content: "\f073";
+         content: "";
          display: inline-block;
          font-family: 'FontAwesome';
          margin-right: $base__space-unit / 3;
@@ -103,7 +104,8 @@ footer.entry-meta {
 
 .comments-link {
    &:before {
-      content: "\f075";
+      // content: "\f075";
+      content: "";
       display: inline-block;
       font-family: 'FontAwesome';
       margin-right: $base__space-unit / 3;
@@ -114,7 +116,8 @@ footer.entry-meta {
    margin-left: $base__space-unit;
 
    &:before {
-      content: "\f040";
+      // content: "\f040";
+      content: "";
       display: inline-block;
       font-family: 'FontAwesome';
       margin-right: $base__space-unit / 3;
