--- a/wcyvr-2016.css
+++ b/wcyvr-2016.css
@@ -449,7 +449,7 @@ textarea {
 hgroup {
   height: 265px;
   background: url("https://2016.vancouver.wordcamp.org/files/2016/05/wcyvr2016-logo-white.png") center center no-repeat, linear-gradient(to bottom, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0.25) 100%), url("https://2016.vancouver.wordcamp.org/files/2016/05/forest-look-up.jpg") center center no-repeat;
-  background-size: 255px 415px, cover, cover; }
+  background-size: 320px auto, cover, cover; }
   hgroup h1, hgroup h2 {
     display: none; }
   .home hgroup {
