--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -5,47 +5,44 @@
 .site-content {
    border-bottom: 8px solid $color__wcyvr-green;
    position: relative;
-}
 
-.site-content:after {
-   bottom: 0;
-   content: '';
-   display: block;
-   height: 300px;
-   left: 50%;
-   max-width: 1400px;
-   position: absolute;
-   transform: translateX(-50%);
-   width: 100%;
-   z-index: -1;
+   &:after {
+      bottom: 0;
+      content: '';
+      display: block;
+      height: 300px;
+      left: 50%;
+      max-width: 1400px;
+      position: absolute;
+      transform: translateX(-50%);
+      width: 100%;
+      z-index: -1;
 
-   background:
-      // url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3C%21--%20Generator%3A%20Adobe%20Illustrator%2016.0.4%2C%20SVG%20Export%20Plug-In%20.%20SVG%20Version%3A%206.00%20Build%200%29%20%20--%3E%0A%3C%21DOCTYPE%20svg%20PUBLIC%20%22-//W3C//DTD%20SVG%201.1//EN%22%20%22http%3A//www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd%22%3E%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Layer_1%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20x%3D%220px%22%20y%3D%220px%22%0A%09%20width%3D%22400px%22%20height%3D%22180px%22%20viewBox%3D%220%200%20400%20180%22%20enable-background%3D%22new%200%200%20400%20180%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cpath%20fill%3D%22%23D3DDD3%22%20d%3D%22M115.847%2C98.571c0-17.572-12.483-31.851-28.453-33.104c0%2C0%2C0%2C0%2C0-0.157%0A%09c0-14.435-10.887-26.201-24.242-26.201c-9.001%2C0-16.841%2C5.334-21.051%2C13.179c-3.774-4.079-9-6.589-14.662-6.589%0A%09c-11.468%2C0-20.613%2C10.041-20.613%2C22.278c0%2C7.061%2C2.903%2C13.179%2C7.549%2C17.259c-7.839%2C6.746-12.775%2C17.101-12.775%2C28.71%0A%09c0%2C20.397%2C14.952%2C36.871%2C33.824%2C36.871c4.065%2C0%2C8.275-0.784%2C11.179-2.195V180h11.613v-29.653c1.452%2C0.313%2C3.194%2C0.627%2C4.937%2C0.627%0A%09c11.178%2C0%2C20.468-8.157%2C23.226-19.142C102.783%2C130.892%2C115.847%2C116.458%2C115.847%2C98.571z%22/%3E%0A%3Cpath%20fill%3D%22%23D3DDD3%22%20d%3D%22M282.864%2C157.644h-10.86l-5.102-8.238h3.374c1.83%2C0%2C3.305-1.642%2C3.305-3.659v-1.083%0A%09c0-2.028-1.475-3.664-3.305-3.664h-35.492c-1.824%2C0-3.301%2C1.636-3.301%2C3.664v1.083c0%2C2.018%2C1.476%2C3.659%2C3.301%2C3.659h3.307%0A%09l-5.096%2C8.238h-10.801c-1.823%2C0-3.303%2C1.637-3.303%2C3.659v1.226c0%2C2.017%2C1.479%2C3.659%2C3.303%2C3.659h5.518l-5.585%2C9.03%0A%09c-0.61%2C0.985-0.104%2C2.536%2C1.123%2C3.472l0.742%2C0.564c1.229%2C0.935%2C2.717%2C0.889%2C3.323-0.092l8.025-12.975h34.336l8.069%2C13.046%0A%09c0.61%2C0.985%2C2.101%2C1.026%2C3.329%2C0.091l0.742-0.559c1.226-0.931%2C1.724-2.479%2C1.118-3.467l-5.641-9.111h5.569%0A%09c1.824%2C0%2C3.304-1.643%2C3.304-3.66v-1.226C286.167%2C159.28%2C284.688%2C157.644%2C282.864%2C157.644z%20M240.625%2C157.644l5.095-8.238h13.568%0A%09l5.098%2C8.238H240.625z%22/%3E%0A%3Cpath%20fill%3D%22%23D3DDD3%22%20d%3D%22M159.217%2C100.616c0%2C0%2C4.401-3.696%2C4.189-5.39c-0.164-1.311-2.856-3.409-4.167-3.247%0A%09c-1.364%2C0.169-3.381%2C4.337-3.381%2C4.337l-0.022-0.022v0.022c0%2C0-2.016-4.168-3.38-4.337c-1.31-0.162-3.996%2C1.938-4.159%2C3.247%0A%09c-0.212%2C1.697%2C4.196%2C5.405%2C4.196%2C5.405L96.605%2C180h39.191c14.005-12.188%2C20.315-27.715%2C20.315-27.715h0.222%0A%09c0%2C0%2C6.123%2C14.954%2C19.735%2C27.715l34.418-0.096L159.217%2C100.616z%22/%3E%0A%3Cpath%20fill%3D%22%23D3DDD3%22%20d%3D%22M343.939%2C180h8.037v-41.587l0.003%2C0.006h44.888c0.87-0.011%2C1.534-0.945%2C1.534-1.866%0A%09c0-0.34-0.086-0.654-0.249-0.929l-23.435-40.253c-0.255-0.435-0.608-1.66%2C0.747-1.893l5.841-0.604%0A%09c0.864-0.012%2C1.521-0.945%2C1.521-1.868c0-0.337-0.094-0.651-0.251-0.928l-18.84-33.012c-0.38-0.604-0.206-1.483%2C0.596-1.607%0A%09l3.409-0.594c0.858-0.148%2C1.362-1.189%2C1.213-2.101c-0.038-0.217-0.109-0.418-0.206-0.596L355.16%2C28.123%0A%09c-0.264-0.512%2C0.048-1.121%2C0.498-1.261l1.779-0.55c0.838-0.258%2C1.212-1.36%2C0.945-2.248c-0.041-0.14-0.098-0.277-0.173-0.396%0A%09L345.26%2C0.77C344.979%2C0.311%2C344.505%2C0%2C343.939%2C0s-1.039%2C0.311-1.319%2C0.77l-12.951%2C22.906c-0.065%2C0.118-0.122%2C0.254-0.169%2C0.396%0A%09c-0.263%2C0.884%2C0.111%2C1.987%2C0.947%2C2.248l1.776%2C0.55c0.454%2C0.14%2C0.769%2C0.75%2C0.506%2C1.258l-13.593%2C24.047%0A%09c-0.098%2C0.178-0.166%2C0.38-0.202%2C0.593c-0.152%2C0.913%2C0.352%2C1.955%2C1.213%2C2.104l3.409%2C0.59c0.801%2C0.125%2C0.974%2C1.006%2C0.597%2C1.608%0A%09l-18.846%2C33.012c-0.158%2C0.274-0.249%2C0.589-0.249%2C0.927c0%2C0.921%2C0.658%2C1.855%2C1.521%2C1.869l5.838%2C0.605%0A%09c1.354%2C0.231%2C1.003%2C1.457%2C0.75%2C1.892l-23.439%2C40.25c-0.16%2C0.27-0.249%2C0.586-0.249%2C0.924c0%2C0.923%2C0.669%2C1.86%2C1.534%2C1.871H335.9%0A%09l0.009-0.011V180H343.939z%22/%3E%0A%3C/svg%3E%0A) no-repeat right 15px bottom;
-      url('https://2016.vancouver.wordcamp.org/files/2016/05/right-scene.png') no-repeat right 15px bottom;
-      background-size: 300px 135px;
-
-   @include big-phone {
-      background-size: 400px 180px;
-   }
-
-   @include tablet {
       background:
-         // url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3C%21--%20Generator%3A%20Adobe%20Illustrator%2016.0.4%2C%20SVG%20Export%20Plug-In%20.%20SVG%20Version%3A%206.00%20Build%200%29%20%20--%3E%0A%3C%21DOCTYPE%20svg%20PUBLIC%20%22-//W3C//DTD%20SVG%201.1//EN%22%20%22http%3A//www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd%22%3E%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Layer_1%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20x%3D%220px%22%20y%3D%220px%22%0A%09%20width%3D%22356px%22%20height%3D%22214px%22%20viewBox%3D%220%200%20356%20214%22%20enable-background%3D%22new%200%200%20356%20214%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cpath%20fill%3D%22%23D3DDD3%22%20d%3D%22M351.691%2C166.428c-1.033-0.366-1.867-1.133-2.312-2.121c0%2C0.002%2C0%2C0.002%2C0%2C0.004%0A%09c-0.789-5.17-4.863-9.271-10.059-10.07l0.002-0.092l-3.543-0.065c0.041-2.222-1.725-4.052-3.943-4.093%0A%09c-2.217-0.04-4.049%2C1.724-4.09%2C3.945c0%2C0-32.416-0.624-32.611-0.628c-11.701-0.215-21.943%2C6.286-27.111%2C15.943%0A%09c-0.023%2C0.035-0.057%2C0.062-0.078%2C0.101c-3.348%2C5.841-9.496%2C9.187-9.496%2C9.187l2.129%2C3.428c1.293%2C1.196%2C2.541%2C1.572%2C3.889%2C1.406%0A%09c-0.006%2C3.404%2C0.557%2C6.679%2C1.596%2C9.738l-0.016%2C0.005c0%2C0%2C2.934%2C16.982%2C7.279%2C20.09c2.303%2C1.646%2C11.318%2C0.208%2C11.318%2C0.208%0A%09l-0.01-1.553c0.012%2C0.002-0.027-4.13-0.027-4.13c0.148-0.97%2C0.41-1.901%2C0.775-2.779c1.521%2C0.29%2C3.121%2C0.466%2C4.785%2C0.496%0A%09c6.117%2C0.112%2C11.539-1.671%2C14.754-4.472c0.645%2C0.629%2C1.227%2C1.325%2C1.715%2C2.086c0.018%2C3.259%2C0.414%2C6.123%2C1.514%2C7.642%0A%09c1.648%2C2.275%2C10.736%2C3.307%2C10.736%2C3.307l4.484-21.682c0.541-1.755%2C1.16-5.613%2C1.16-5.613c1.471-4.848%2C5.896-8.372%2C11.156-8.527%0A%09l3.191%2C0.059l0.002-0.039c0.314%2C0.021%2C0.627%2C0.052%2C0.945%2C0.057c13.111%2C0.211%2C15.613-5.739%2C15.725-11.766L351.691%2C166.428z%22/%3E%0A%3Cpath%20fill%3D%22%23D3DDD3%22%20d%3D%22M93.811%2C113.363c-2.603-4.795-6.365-8.575-10.705-11.191c1.447-7.268%2C0.434-14.973-3.473-21.95%0A%09c-8.68-15.407-28.065-20.786-43.4-12.063c-13.02%2C7.413-18.808%2C22.82-14.756%2C36.775c-1.447%2C0.581-2.894%2C1.308-4.341%2C2.034%0A%09c-15.334%2C8.721-20.832%2C28.2-12.151%2C43.606c8.245%2C14.828%2C26.909%2C20.352%2C41.376%2C12.938V214H59.38v-53.686%0A%09c8.68%2C1.6%2C15.334%2C0.582%2C22.423-3.344C97.138%2C148.25%2C102.492%2C128.773%2C93.811%2C113.363z%22/%3E%0A%3Cpath%20fill%3D%22%23D3DDD3%22%20d%3D%22M163.565%2C214h9.696v-49.141l0.004%2C0.008h54.158c1.049-0.014%2C1.85-1.119%2C1.85-2.207%0A%09c0-0.4-0.105-0.771-0.302-1.098l-28.272-47.561c-0.309-0.514-0.734-1.963%2C0.9-2.236l7.047-0.715%0A%09c1.043-0.014%2C1.836-1.115%2C1.836-2.207c0-0.398-0.112-0.77-0.302-1.096L187.449%2C68.74c-0.458-0.713-0.249-1.753%2C0.719-1.899%0A%09l4.113-0.703c1.037-0.175%2C1.644-1.404%2C1.463-2.482c-0.045-0.256-0.132-0.492-0.248-0.703l-16.394-28.413%0A%09c-0.319-0.604%2C0.058-1.324%2C0.602-1.488l2.146-0.651c1.012-0.304%2C1.463-1.607%2C1.142-2.655c-0.05-0.167-0.12-0.329-0.209-0.468%0A%09L165.158%2C2.22c-0.338-0.543-0.91-0.911-1.593-0.911c-0.685%2C0-1.254%2C0.368-1.592%2C0.911l-15.625%2C27.064%0A%09c-0.079%2C0.141-0.148%2C0.3-0.204%2C0.469c-0.317%2C1.043%2C0.134%2C2.348%2C1.143%2C2.653l2.144%2C0.651c0.547%2C0.166%2C0.926%2C0.887%2C0.609%2C1.488%0A%09l-16.399%2C28.41c-0.117%2C0.212-0.2%2C0.451-0.243%2C0.703c-0.185%2C1.078%2C0.424%2C2.308%2C1.462%2C2.486l4.115%2C0.697%0A%09c0.965%2C0.146%2C1.174%2C1.189%2C0.717%2C1.902l-22.736%2C39.004c-0.189%2C0.324-0.301%2C0.695-0.301%2C1.096c0%2C1.088%2C0.796%2C2.191%2C1.834%2C2.207%0A%09l7.044%2C0.715c1.633%2C0.273%2C1.21%2C1.723%2C0.905%2C2.236l-28.279%2C47.559c-0.196%2C0.32-0.301%2C0.693-0.301%2C1.094%0A%09c0%2C1.09%2C0.806%2C2.197%2C1.852%2C2.211h54.156l0.01-0.014V214H163.565z%22/%3E%0A%3C/svg%3E%0A) no-repeat left 15px bottom,
-         // url(data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3C%21--%20Generator%3A%20Adobe%20Illustrator%2016.0.4%2C%20SVG%20Export%20Plug-In%20.%20SVG%20Version%3A%206.00%20Build%200%29%20%20--%3E%0A%3C%21DOCTYPE%20svg%20PUBLIC%20%22-//W3C//DTD%20SVG%201.1//EN%22%20%22http%3A//www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd%22%3E%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Layer_1%22%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20x%3D%220px%22%20y%3D%220px%22%0A%09%20width%3D%22400px%22%20height%3D%22180px%22%20viewBox%3D%220%200%20400%20180%22%20enable-background%3D%22new%200%200%20400%20180%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cpath%20fill%3D%22%23D3DDD3%22%20d%3D%22M115.847%2C98.571c0-17.572-12.483-31.851-28.453-33.104c0%2C0%2C0%2C0%2C0-0.157%0A%09c0-14.435-10.887-26.201-24.242-26.201c-9.001%2C0-16.841%2C5.334-21.051%2C13.179c-3.774-4.079-9-6.589-14.662-6.589%0A%09c-11.468%2C0-20.613%2C10.041-20.613%2C22.278c0%2C7.061%2C2.903%2C13.179%2C7.549%2C17.259c-7.839%2C6.746-12.775%2C17.101-12.775%2C28.71%0A%09c0%2C20.397%2C14.952%2C36.871%2C33.824%2C36.871c4.065%2C0%2C8.275-0.784%2C11.179-2.195V180h11.613v-29.653c1.452%2C0.313%2C3.194%2C0.627%2C4.937%2C0.627%0A%09c11.178%2C0%2C20.468-8.157%2C23.226-19.142C102.783%2C130.892%2C115.847%2C116.458%2C115.847%2C98.571z%22/%3E%0A%3Cpath%20fill%3D%22%23D3DDD3%22%20d%3D%22M282.864%2C157.644h-10.86l-5.102-8.238h3.374c1.83%2C0%2C3.305-1.642%2C3.305-3.659v-1.083%0A%09c0-2.028-1.475-3.664-3.305-3.664h-35.492c-1.824%2C0-3.301%2C1.636-3.301%2C3.664v1.083c0%2C2.018%2C1.476%2C3.659%2C3.301%2C3.659h3.307%0A%09l-5.096%2C8.238h-10.801c-1.823%2C0-3.303%2C1.637-3.303%2C3.659v1.226c0%2C2.017%2C1.479%2C3.659%2C3.303%2C3.659h5.518l-5.585%2C9.03%0A%09c-0.61%2C0.985-0.104%2C2.536%2C1.123%2C3.472l0.742%2C0.564c1.229%2C0.935%2C2.717%2C0.889%2C3.323-0.092l8.025-12.975h34.336l8.069%2C13.046%0A%09c0.61%2C0.985%2C2.101%2C1.026%2C3.329%2C0.091l0.742-0.559c1.226-0.931%2C1.724-2.479%2C1.118-3.467l-5.641-9.111h5.569%0A%09c1.824%2C0%2C3.304-1.643%2C3.304-3.66v-1.226C286.167%2C159.28%2C284.688%2C157.644%2C282.864%2C157.644z%20M240.625%2C157.644l5.095-8.238h13.568%0A%09l5.098%2C8.238H240.625z%22/%3E%0A%3Cpath%20fill%3D%22%23D3DDD3%22%20d%3D%22M159.217%2C100.616c0%2C0%2C4.401-3.696%2C4.189-5.39c-0.164-1.311-2.856-3.409-4.167-3.247%0A%09c-1.364%2C0.169-3.381%2C4.337-3.381%2C4.337l-0.022-0.022v0.022c0%2C0-2.016-4.168-3.38-4.337c-1.31-0.162-3.996%2C1.938-4.159%2C3.247%0A%09c-0.212%2C1.697%2C4.196%2C5.405%2C4.196%2C5.405L96.605%2C180h39.191c14.005-12.188%2C20.315-27.715%2C20.315-27.715h0.222%0A%09c0%2C0%2C6.123%2C14.954%2C19.735%2C27.715l34.418-0.096L159.217%2C100.616z%22/%3E%0A%3Cpath%20fill%3D%22%23D3DDD3%22%20d%3D%22M343.939%2C180h8.037v-41.587l0.003%2C0.006h44.888c0.87-0.011%2C1.534-0.945%2C1.534-1.866%0A%09c0-0.34-0.086-0.654-0.249-0.929l-23.435-40.253c-0.255-0.435-0.608-1.66%2C0.747-1.893l5.841-0.604%0A%09c0.864-0.012%2C1.521-0.945%2C1.521-1.868c0-0.337-0.094-0.651-0.251-0.928l-18.84-33.012c-0.38-0.604-0.206-1.483%2C0.596-1.607%0A%09l3.409-0.594c0.858-0.148%2C1.362-1.189%2C1.213-2.101c-0.038-0.217-0.109-0.418-0.206-0.596L355.16%2C28.123%0A%09c-0.264-0.512%2C0.048-1.121%2C0.498-1.261l1.779-0.55c0.838-0.258%2C1.212-1.36%2C0.945-2.248c-0.041-0.14-0.098-0.277-0.173-0.396%0A%09L345.26%2C0.77C344.979%2C0.311%2C344.505%2C0%2C343.939%2C0s-1.039%2C0.311-1.319%2C0.77l-12.951%2C22.906c-0.065%2C0.118-0.122%2C0.254-0.169%2C0.396%0A%09c-0.263%2C0.884%2C0.111%2C1.987%2C0.947%2C2.248l1.776%2C0.55c0.454%2C0.14%2C0.769%2C0.75%2C0.506%2C1.258l-13.593%2C24.047%0A%09c-0.098%2C0.178-0.166%2C0.38-0.202%2C0.593c-0.152%2C0.913%2C0.352%2C1.955%2C1.213%2C2.104l3.409%2C0.59c0.801%2C0.125%2C0.974%2C1.006%2C0.597%2C1.608%0A%09l-18.846%2C33.012c-0.158%2C0.274-0.249%2C0.589-0.249%2C0.927c0%2C0.921%2C0.658%2C1.855%2C1.521%2C1.869l5.838%2C0.605%0A%09c1.354%2C0.231%2C1.003%2C1.457%2C0.75%2C1.892l-23.439%2C40.25c-0.16%2C0.27-0.249%2C0.586-0.249%2C0.924c0%2C0.923%2C0.669%2C1.86%2C1.534%2C1.871H335.9%0A%09l0.009-0.011V180H343.939z%22/%3E%0A%3C/svg%3E%0A) no-repeat right 15px bottom;
-         url('https://2016.vancouver.wordcamp.org/files/2016/05/left-scene.png') no-repeat left 15px bottom,
          url('https://2016.vancouver.wordcamp.org/files/2016/05/right-scene.png') no-repeat right 15px bottom;
-         background-size: 267px 161px, 300px 135px;
-   }
+         background-size: 300px 135px;
 
-   @include desktop {
-      background-size: 356px 214px, 400px 180px;
+      @include big-phone {
+         background-size: 400px 180px;
+      }
+
+      @include tablet {
+         background:
+            url('https://2016.vancouver.wordcamp.org/files/2016/05/left-scene.png') no-repeat left 15px bottom,
+            url('https://2016.vancouver.wordcamp.org/files/2016/05/right-scene.png') no-repeat right 15px bottom;
+            background-size: 267px 161px, 300px 135px;
+      }
+
+      @include desktop {
+         background-size: 356px 214px, 400px 180px;
+      }
    }
 }
 
 #content {
    @include container;
    max-width: $inner-container-width;
-   padding-bottom: $base__space-unit * 3;
+   padding-bottom: $base__space-unit * 4;
    padding-top: $base__space-unit;
 }
 
@@ -58,7 +55,7 @@
 }
 
 .entry-header {
-   padding-bottom: $base__space-unit;
+   margin-bottom: $base__space-unit;
    text-align: center;
 
    .entry-meta {
@@ -86,7 +83,7 @@
 }
 
 .entry-meta {
-   color: $color__wcyvr-grey;
+   color: darken( $color__wcyvr-grey, 15% );
    font-family: $font__alt;
 
    a {
@@ -100,26 +97,197 @@
 
 footer.entry-meta {
    margin-top: $base__space-unit * 2;
+
+   & > span {
+      margin: 0 ($base__space-unit / 3);
+      white-space: nowrap;
+
+      &:first-child {
+         margin-left: 0;
+      }
+
+      &:last-child {
+         margin-right: 0;
+      }
+   }
 }
 
-.comments-link {
+.comments-link,
+.edit-link {
    &:before {
-      // content: "\f075";
-      content: "";
+      color: $color__wcyvr-grey;
       display: inline-block;
       font-family: 'FontAwesome';
       margin-right: $base__space-unit / 3;
    }
 }
 
-.edit-link {
-   margin-left: $base__space-unit;
+.comments-link {
+   &:before {
+      // content: "\f075";
+      content: "";
+   }
+}
 
+.edit-link {
    &:before {
       // content: "\f040";
       content: "";
+   }
+}
+
+/* Comments */
+
+.comments-area {
+   border-top: $base__border;
+   padding-top: $base__space-unit;
+
+   ol, ul {
+      list-style-type: none;
+   }
+}
+
+.comment-content a {
+	word-wrap: break-word;
+}
+
+.bypostauthor {
+	display: block;
+}
+
+.comments-title {
+   @include font-size(1.8);
+	margin-bottom: 0;
+   margin-top: $base__space-unit / 2;
+}
+
+.commentlist {
+   margin-bottom: $base__space-unit * 1.5;
+   margin-left: 0;
+   padding-left: 0;
+
+	& > li {
+		border-bottom: $base__border;
+	}
+}
+
+.children li {
+	border-top: $base__border;
+}
+
+.comment {
+	padding-top: $base__space-unit;
+
+	article {
+		padding-bottom: $base__space-unit;
+	}
+}
+
+.comment-body {
+	display: flex;
+
+	p {
+		margin-bottom: $base__space-unit / 2;
+	}
+}
+
+.comment {
+   footer {
+      @extend .clearfix;
+      width: 100%;
+   }
+}
+
+.comment-author,
+.comment-meta {
+   a {
+      text-decoration: none;
+   }
+}
+
+.comment-author {
+   .avatar {
+   	border-radius: 50%;
+      float: left;
+   	height: 64px;
+   	margin-right: $base__space-unit;
+   	overflow: hidden;
+   	width: 64px;
+   }
+
+	cite {
+		font-style: normal;
+		font-weight: bold;
+	}
+
+   .says {
+      @extend .assistive-text;
+   }
+}
+
+.comment-meta {
+   line-height: 1;
+	margin-bottom: $base__space-unit / 2;
+
+   a {
+      color: $color__wcyvr-grey;
+      font-family: $font__alt;
+   }
+}
+
+.required {
+	color: $color__wcyvr-green;
+}
+
+.comment-reply-link {
+   background: $color__wcyvr-red;
+   border: none;
+   border-radius: 0;
+   color: white;
+   cursor: pointer;
+   font-family: $font__main;
+   @include font-size(.8);
+   line-height: 1;
+   padding: ($base__space-unit / 3) ($base__space-unit / 2);
+   text-decoration: none;
+   text-transform: uppercase;
+
+   &:hover,
+   &:active,
+   &:focus {
+      background: darken($color__wcyvr-red, 5%);
+      color: white;
+   }
+}
+
+.comment-reply-title {
+   @include font-size(1.6);
+	margin-top: $base__space-unit;
+}
+
+#cancel-comment-reply-link:hover {
+	text-decoration: none;
+}
+
+/* Search and Archives */
+
+.search,
+.archive {
+   .page-header {
+      text-align: center;
+   }
+   .page-title {
+      border-bottom: $base__border;
+      color: darken($color__wcyvr-grey, 15%);
+      font-family: $font__main;
+      @include font-size(1.2);
       display: inline-block;
-      font-family: 'FontAwesome';
-      margin-right: $base__space-unit / 3;
+      padding: 0 $base__space-unit ($base__space-unit * 1.5);
+   }
+}
+
+.search {
+   #nav-above {
+      display: none;
    }
 }
